--- a/sass/1-base/_typography.scss
+++ b/sass/1-base/_typography.scss
@@ -1,6 +1,5 @@
 @use  '../0-abstracts/colors' as c;
-//example $fontDisplay: 'Big Shoulders Display', cursive;
-$fontDisplay:  'Rubik', sans-serif;
+$fontDisplay: 'Poppins', sans-serif;
 
 body {
     font-family: $fontDisplay;
@@ -14,35 +13,13 @@ body {
             line-height: 1.5rem;
         }
     }
-    .contact {
-        h2 {
-            font-size: 0.8rem;
-            font-weight: 500;
-        }
-        p {
-            font-size: 0.6rem;
-            font-weight: 400;
-        }
-    }
     .content {
         .msg {
             font-size: 0.7rem;
             font-weight: 400;
         }
-    .msg-option {
-        font-size: 0.6rem; 
-        font-weight: 400; 
-        .price {
-            font-size: 0.8rem;
-            font-weight: 700;
-        }
-    }
-        .type-msg {
-            .arrowright {
-                font-size: 1.2rem;
-                font-weight: 700;
-            }
-        }
+
+
 
     }
 }
