--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: hsl(212, 45%, 89%);
+  background-color: hsl(212deg, 45%, 89%);
   font-size: 15px;
   font-family: "Outfit", sans-serif;
 }
@@ -7,7 +7,7 @@ body {
 .container {
   width: 270px;
   padding: 15px;
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0deg, 0%, 100%);
   text-align: center;
   position: absolute;
   top: 50%;
@@ -16,7 +16,7 @@ body {
   border-radius: 4%;
 }
 .container .hero {
-  color: hsl(218, 44%, 22%);
+  color: hsl(218deg, 44%, 22%);
   padding-left: 10px;
   padding-right: 10px;
   font-weight: 700;
@@ -26,7 +26,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   font-weight: 400;
-  color: hsl(220, 15%, 55%);
+  color: hsl(220deg, 15%, 55%);
 }
 .container img {
   width: 100%;
